Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-112995

Long press on touch screen breaks drag and drop

    XMLWordPrintable

Details

    • Windows
    • 3902fb043 (dev), 865bfc531 (6.6), 38e6863a4 (6.5)

    Description

      When a drag session is started after a long press on a touch screen, the drop on finger release often does not work correctly, and you have to tap or click again to commit the drop.

      You can reproduce this by running the attached sample code, which is taken from QTBUG-77414.

      1. Launch the sample app.
      2. Press and hold on one of the squares until Windows gives you the visual feedback that a long press as started, and then drag it over another square.

      I've also attached a video that demos the issue using the sample app.

      I think this could be related to the changes made in QTBUG-77414.

      I've also tried this using Qt 5.15.13 and it seems to work as expected.

      Qt Support: We tested this example and were able to reproduce the issue once.

      Attachments

        1. DragAndDropWithMimeData.zip
          5 kB
        2. IMG_7683.mp4
          1.78 MB
        3. IMG_7764.mp4
          7.53 MB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            santhoshkumar Santhosh Kumar Selvaraj
            rupert_d Rupert Daniel
            Votes:
            1 Vote for this issue
            Watchers:
            9 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes